--- a/notebooks/plot_images.ipynb
+++ b/notebooks/plot_images.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Image visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -15,6 +22,13 @@
     "aiida.load_profile();\n",
     "\n",
     "FITSDATA = plugins.DataFactory('fits.data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Search and load FITS data"
    ]
   },
   {
