aperture photometry workflow

--- a/notebooks/plot_images.ipynb
+++ b/notebooks/plot_images.ipynb
@@ -21,7 +21,8 @@
     "import aiida\n",
     "aiida.load_profile();\n",
     "\n",
-    "FITSDATA = plugins.DataFactory('fits.data')"
+    "FITSDATA = plugins.DataFactory('fits.data')\n",
+    "ArrayData = plugins.DataFactory('core.array')"
    ]
   },
   {
@@ -33,16 +34,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[<FitsData: uuid: 17f5d0fc-d4f5-412f-829e-de75a611cd94 (pk: 405)>]]"
+       "[[<FitsData: uuid: 99b2c748-4bc8-4ccb-a10e-dbd691d169d1 (pk: 535)>],\n",
+       " [<FitsData: uuid: a512c903-2719-4419-a738-ff501ca9e2e1 (pk: 466)>],\n",
+       " [<FitsData: uuid: 768436cd-f4ef-421f-abf5-602f69c5e588 (pk: 574)>],\n",
+       " [<FitsData: uuid: bc9d9c8e-a30f-4fc1-b46e-22c0d4051f08 (pk: 626)>],\n",
+       " [<FitsData: uuid: 2f7bf1b7-4067-4d95-bbe7-1df14e9bfba7 (pk: 431)>],\n",
+       " [<FitsData: uuid: 315c66b9-3ad9-4ee7-b864-781a9db0f4c9 (pk: 544)>],\n",
+       " [<FitsData: uuid: 4d314cd7-2870-4f53-8f20-61e2e765eb73 (pk: 475)>],\n",
+       " [<FitsData: uuid: a2ded77e-6164-4f77-91c0-e0e8210b36f3 (pk: 564)>],\n",
+       " [<FitsData: uuid: 74423684-bd44-4fa7-9128-b36b0d71bff1 (pk: 452)>],\n",
+       " [<FitsData: uuid: 50a1de7a-c5e9-462d-9435-8e7ddff74092 (pk: 438)>],\n",
+       " [<FitsData: uuid: 532866f7-09f4-4e33-8520-55b81f9510d4 (pk: 484)>],\n",
+       " [<FitsData: uuid: c2da1246-c257-4434-bba8-5545def05538 (pk: 459)>],\n",
+       " [<FitsData: uuid: 17f5d0fc-d4f5-412f-829e-de75a611cd94 (pk: 405)>],\n",
+       " [<FitsData: uuid: c1dc0abb-10b0-4569-8780-281d4c4d906e (pk: 554)>],\n",
+       " [<FitsData: uuid: b933ab7e-b962-4dc9-9845-9cd0e5425910 (pk: 445)>],\n",
+       " [<FitsData: uuid: c1d634cf-7c1f-464d-a410-2b7301cc335c (pk: 418)>],\n",
+       " [<FitsData: uuid: 15b2dba1-d2ad-46df-80f5-8ced43308f59 (pk: 493)>],\n",
+       " [<FitsData: uuid: 2830f811-c7b8-4c01-8c13-fa446cde87d7 (pk: 526)>],\n",
+       " [<FitsData: uuid: f21bab50-6804-49c8-b9f4-868f1698c55a (pk: 503)>],\n",
+       " [<FitsData: uuid: ac1db21d-ff07-485d-9b90-0c9234e9205d (pk: 636)>],\n",
+       " [<FitsData: uuid: 6770263b-ae53-49a6-8a40-73cf13bafc7f (pk: 584)>],\n",
+       " [<FitsData: uuid: 4be9ca6a-1e8a-42ec-a81a-ddeb66e84850 (pk: 596)>],\n",
+       " [<FitsData: uuid: 8d78a943-09ba-4148-8581-a601b3f8aa42 (pk: 606)>],\n",
+       " [<FitsData: uuid: f232c1f5-f208-4354-9fb7-f0dd44bc3e71 (pk: 646)>],\n",
+       " [<FitsData: uuid: 59b4af65-8f53-42e5-b66d-cafd266a3a22 (pk: 616)>]]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,35 +80,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<FitsData: uuid: 17f5d0fc-d4f5-412f-829e-de75a611cd94 (pk: 405)>"
+       "<FitsData: uuid: 59b4af65-8f53-42e5-b66d-cafd266a3a22 (pk: 616)>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "node = orm.load_node(405)\n",
+    "node = orm.load_node(616)\n",
     "node"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filename: /tmp/tmp1g9wa0aj/combined_bias.fit\n",
+      "Filename: /tmp/tmpg7i04szd/combined_bias.fit\n",
       "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
       "  0  PRIMARY       1 PrimaryHDU      39   (4096, 4096)   float64   \n",
       "  1  MASK          1 ImageHDU         8   (4096, 4096)   uint8   \n",
@@ -99,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -158,6 +183,98 @@
    "outputs": [],
    "source": [
     "#im_collection.summary['file']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inspecting qtables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[<ArrayData: uuid: 142e5384-711e-41df-90e7-4761a6336cc7 (pk: 1)>],\n",
+       " [<ArrayData: uuid: 31a62d66-c249-49c3-b761-5c905e9e394e (pk: 648)>]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qb = orm.QueryBuilder()\n",
+    "qb.append(ArrayData, project=[\"*\"])\n",
+    "qb.all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ArrayData: uuid: 31a62d66-c249-49c3-b761-5c905e9e394e (pk: 648)>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node = orm.load_node(648)\n",
+    "node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['as_array']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node.get_arraynames()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([(1, 10., 10., 56443.97506204, 100341.53803436)],\n",
+       "      dtype=[('id', '<i8'), ('xcenter', '<f8'), ('ycenter', '<f8'), ('aperture_sum_0', '<f8'), ('aperture_sum_1', '<f8')])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node.get_array('as_array')"
    ]
   }
  ],
