aperture photometry additions

--- a/notebooks/plot_images.ipynb
+++ b/notebooks/plot_images.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[<FitsData: uuid: 99b2c748-4bc8-4ccb-a10e-dbd691d169d1 (pk: 535)>],\n",
+       "[[<FitsData: uuid: a046f39b-219a-4cfb-893d-3b933c19beb6 (pk: 660)>],\n",
+       " [<FitsData: uuid: 99b2c748-4bc8-4ccb-a10e-dbd691d169d1 (pk: 535)>],\n",
        " [<FitsData: uuid: a512c903-2719-4419-a738-ff501ca9e2e1 (pk: 466)>],\n",
        " [<FitsData: uuid: 768436cd-f4ef-421f-abf5-602f69c5e588 (pk: 574)>],\n",
        " [<FitsData: uuid: bc9d9c8e-a30f-4fc1-b46e-22c0d4051f08 (pk: 626)>],\n",
@@ -63,11 +64,15 @@
        " [<FitsData: uuid: 6770263b-ae53-49a6-8a40-73cf13bafc7f (pk: 584)>],\n",
        " [<FitsData: uuid: 4be9ca6a-1e8a-42ec-a81a-ddeb66e84850 (pk: 596)>],\n",
        " [<FitsData: uuid: 8d78a943-09ba-4148-8581-a601b3f8aa42 (pk: 606)>],\n",
+       " [<FitsData: uuid: 18fb39c3-e6b5-43d5-8f4d-f65eb9039401 (pk: 656)>],\n",
        " [<FitsData: uuid: f232c1f5-f208-4354-9fb7-f0dd44bc3e71 (pk: 646)>],\n",
-       " [<FitsData: uuid: 59b4af65-8f53-42e5-b66d-cafd266a3a22 (pk: 616)>]]"
+       " [<FitsData: uuid: a1394ac5-45a8-4948-a7e9-ce7db3983678 (pk: 649)>],\n",
+       " [<FitsData: uuid: 59b4af65-8f53-42e5-b66d-cafd266a3a22 (pk: 616)>],\n",
+       " [<FitsData: uuid: de6d6e47-e49e-46ce-8838-02bab6c7498b (pk: 653)>],\n",
+       " [<FitsData: uuid: 3998c21c-a8c0-4232-809b-b0bc5ff15e8d (pk: 665)>]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +94,7 @@
        "<FitsData: uuid: 59b4af65-8f53-42e5-b66d-cafd266a3a22 (pk: 616)>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filename: /tmp/tmpg7i04szd/combined_bias.fit\n",
+      "Filename: /tmp/tmpk4_4pb21/combined_bias.fit\n",
       "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
       "  0  PRIMARY       1 PrimaryHDU      39   (4096, 4096)   float64   \n",
       "  1  MASK          1 ImageHDU         8   (4096, 4096)   uint8   \n",
@@ -194,17 +199,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[[<ArrayData: uuid: 142e5384-711e-41df-90e7-4761a6336cc7 (pk: 1)>],\n",
-       " [<ArrayData: uuid: 31a62d66-c249-49c3-b761-5c905e9e394e (pk: 648)>]]"
+       " [<ArrayData: uuid: 31a62d66-c249-49c3-b761-5c905e9e394e (pk: 648)>],\n",
+       " [<ArrayData: uuid: d3d66c19-a0ec-460d-851b-f5334e368530 (pk: 650)>]]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +232,7 @@
        "<ArrayData: uuid: 31a62d66-c249-49c3-b761-5c905e9e394e (pk: 648)>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +253,7 @@
        "['as_array']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -268,13 +274,62 @@
        "      dtype=[('id', '<i8'), ('xcenter', '<f8'), ('ycenter', '<f8'), ('aperture_sum_0', '<f8'), ('aperture_sum_1', '<f8')])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "node.get_array('as_array')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node = orm.List([3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<List: uuid: 0ac7575e-8630-4408-abc5-6ac4684d6544 (unstored) value: [3]>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node.attributes['list']"
    ]
   }
  ],
